@@ -104,6 +104,7 @@ int READNET_FUNCTION(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv
 
     static const char *FUNC_strs[] = {
         "getLayerNames",
+        "getUnconnectedOutLayers",
         "setPreferableBackend",
         "setPreferableTarget",
         "setInput",
@@ -117,6 +118,7 @@ int READNET_FUNCTION(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv
 
     enum FUNC_enum {
         FUNC_getLayerNames,
+        FUNC_getUnconnectedOutLayers,
         FUNC_setPreferableBackend,
         FUNC_setPreferableTarget,
         FUNC_setInput,
@@ -165,6 +167,33 @@ int READNET_FUNCTION(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv
             for (size_t i = 0; i < value.size(); i++) {
                 Tcl_ListObjAppendElement(NULL, pResultStr,
                                          Tcl_NewStringObj(value[i].c_str(), -1));
+            }
+
+            Tcl_SetObjResult(interp, pResultStr);
+            break;
+        }
+        case FUNC_getUnconnectedOutLayers: {
+            std::vector<int> value;
+            Tcl_Obj *pResultStr = NULL;
+
+            if (objc != 2) {
+                Tcl_WrongNumArgs(interp, 2, objv, 0);
+                return TCL_ERROR;
+            }
+
+            try {
+                value = net->getUnconnectedOutLayers();
+            } catch (const cv::Exception &ex) {
+                return Opencv_Exc2Tcl(interp, &ex);
+            } catch (...) {
+                return Opencv_Exc2Tcl(interp, NULL);
+            }
+
+            pResultStr = Tcl_NewListObj(0, NULL);
+
+            for (size_t i = 0; i < value.size(); i++) {
+                Tcl_ListObjAppendElement(NULL, pResultStr,
+                                         Tcl_NewIntObj(value[i]));
             }
 
             Tcl_SetObjResult(interp, pResultStr);
