@@ -2,6 +2,7 @@
 
 	* Apply Christian's patch:
 	  to/from bytearray methods plus refactoring
+	* Add getUnconnectedOutLayers command to READNET function
 	* Add getLayerNames command to READNET function
 	* Implement command: estimateAffine3D, estimateAffinePartial2D
 
